2004-05-06  Daniel Jacobowitz  <dan@debian.org>

	* Makefile.am (DIST_SUBDIRS): Define.
	* aclocal.m4: Regenerate with automake 1.8.4.
	* Makefile.in: Likewise.
	* doc/Makefile.in: Likewise.

2004-05-06  David Mosberger-Tang  <davidm@hpl.hp.com>

	* config/tc-ia64.c (dot_serialize): Declare.
	(dot_serialize): New function.
	(md_pseudo_table): Add ".serialize.data" and
	".serialize.instruction" directives.

2004-05-06  Nick Clifton  <nickc@redhat.com>

	* messages (as_internal_value_out_of_range): Print a message about
	a value being out of range.  Be consistent about whether the
	values are printed in decimal or hexadecimal.
	(as_warn_value_out_of_range): Generate a warning message about an
	out of range value.
	(as_bad_value_out_of_range): Generate an error message about an
	out of range value.
	* as.h: Prototype the new functions.
	* config/tc-alpha.c (insert_operand): Use new function.
	* config/tc-arc.c (arc_insert_operand): Likewise.
	* config/tc-mn10200.c (mn10200_insert_operand): Likewise.
	* config/tc-mn10300.c (mn10300_insert_operand): Likewise.
	* config/tc-ppc.c (ppc_insert_operand): Likewise.
	* config/tc-s390.c (s390_insert_operand): Likewise.
	* config/tc-v850.c (v850_insert_operand): Likewise.

2004-05-05  Alexandre Oliva  <aoliva@redhat.com>

	* configure.in: Set em=linux for frv-*-*linux*.
	* configure: Rebuilt.
	* config/tc-frv.h (TARGET_FORMAT): Use elf32-frvfdpic if...
	(frv_md_fdpic_enabled): New.
	* config/tc-frv.c (frv_md_fdpic_enabled): New.
	(DEFAULT_FDPIC): New.
	(frv_flags): Use DEFAULT_FDPIC.
	(frv_pic_flag): Likewise.
	(OPTION_NOPIC): New.
	(md_longopts): Add -mnopic.
	(md_parse_option): Handle it.
	(md_show_usage): Add -mfdpic and -mnopic.

2004-05-05  Peter Barada  <peter@the-baradas.com>

	* config/tc-m68k.c: Add find_cf_chip to print list of valid
	chips for invalid coldfire instructions, rename selectors
	for ColdFire sub-variants, add 521x,5249,547x,548x and aliases,