@@ -1,3 +1,8 @@
+2004-05-07  Alexandre Oliva  <aoliva@redhat.com>
+
+	* config/tc-frv.h (MAX_MEM_FOR_RS_ALIGN_CODE): New.
+	(HANDLE_ALIGN): New.
+
 2004-05-06  Daniel Jacobowitz  <dan@debian.org>
 
 	* Makefile.am (DIST_SUBDIRS): Define.
